--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -114,7 +114,7 @@
           <div class="text"></div>
         </article>
         <div class="nav">
-          <button id="prev">Previous</button>
+          <button id="prev">Prev</button>
           <button id="next">Next</button>
         </div>
         <a href="https://docs.api.bible/docs/overview" class="ref">
