--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -19,7 +19,7 @@
         <h2 class="about-title">About me</h2>
         <p class="about-text">My name is Brian Bawuah. I am a Communication & Multimedia student with a passion for creating meaningful things on the web. You can use this bible application to read chapters or verses. This bible uses the <strong>American Standard Version</strong></p>
           <br>
-          <p>For developing this webapplication I used Node.js on the server for getting data out of the <a href="https://docs.api.bible/docs/overview" class="api">Bible API.</a> A little bit of CSS and Javascript on the client-side. I used Handlebars as a template engine to serve dynamic HTML pages to the client.</p>
+          <p>For developing this webapplication I used Javascript on the server  with Node.JS for getting data out of the <a href="https://docs.api.bible/docs/overview" class="api">Bible API.</a> A little bit of CSS and Javascript on the client-side. I used Handlebars as a template engine to serve dynamic HTML pages to the client.</p>
           <p class="greet">Enjoy!</p>
       </article>
     </section>
