--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -101,20 +101,21 @@
       </section>
       {{!-- Section van output --}}
       <section>
-        <div class="nav">
+        <nav>
           <button class="prev">Prev</button>
           <button class="next">Next</button>
-        </div>
+        </nav>
         <p><a href="https://docs.api.bible/docs/overview" class="ref"> API.Bible </a></p>
+        <div class="loading"></div>
         <article class="output">
           <h2 class="title"></h2>
           <h3 class="subtitle"></h3>
           <div class="text"></div>
         </article>
-           <div class="nav">
+           <nav>
           <button class="prev">Prev</button>
           <button class="next">Next</button>
-        </div>
+        </nav>
       </section>
     </section>
   </main> {{>footer}}
