new changes css

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -265,7 +265,7 @@ section[class] section>p {
 .text p span {
   margin-right: 0.5rem;
   font-weight: 700;
-  color: #4fd1c5;
+  color: #285E61;
   /* display: block; */
   margin-top: 0.5em;
 }
