--- a/public/style/style.css
+++ b/public/style/style.css
@@ -24,6 +24,59 @@ html, body {
   line-height: 1.35;
 }
 
+body {
+  position: relative;
+  background: #ffffff;
+  overflow-x: hidden;
+  opacity: 1;
+  animation: fadeIn 3s ease-out;
+}
+
+@keyframes fadeIn {
+  0%{
+    opacity: 0;
+  }
+
+  100%{
+    opacity: 1;
+  }
+}
+
+
+body::before {
+  content: '';
+  background: #234E52;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  /* z-index: 10; */
+  top: 0;
+  left: 0;
+  animation: splash 1.5s cubic-bezier(1,.07,.13,.91) 1;
+}
+
+@keyframes splash {
+  0% {
+    opacity: .2;
+    width: 0;
+  }
+
+  50% {
+    opacity: .2;
+
+    width: 100%;
+    left: 0;
+  }
+
+  100%{
+    opacity: .2;
+
+    left: 100%;
+    /* opacity: 0; */
+  }
+}
+
 h1 {
   font-size: 2.441rem;
 }
@@ -87,7 +140,7 @@ footer {
   width: 100%;
 }
 
-section{
+section {
   padding: 2vmax 0;
 }
 
@@ -96,7 +149,8 @@ section{
 }
 
 /* Loading animation */
-.loading{
+
+.loading {
   border: 6px solid #ccc;
   width: 75px;
   height: 75px;
@@ -109,19 +163,16 @@ section{
   grid-column-start: 1;
   grid-column-end: 3;
   justify-self: center;
-} 
+}
 
-
-@keyframes spin{
-  0%{
+@keyframes spin {
+  0% {
     transform: rotate(0deg);
   }
-
-  50%{
+  50% {
     transform: rotate(360deg);
   }
-
-  100%{
+  100% {
     transform: rotate(1080deg);
   }
 }
@@ -133,26 +184,20 @@ section{
   header, footer, section.grid-about {
     padding: 2vmax;
   }
-
-  p{
+  p {
     width: 100%;
   }
-
   input, button, select {
     display: block;
     margin-bottom: 0.5em;
     width: 100%;
   }
-
-   section[class] section:nth-child(2){
-     margin: 2vmax;
-
-   }
-
+  section[class] section:nth-child(2) {
+    margin: 2vmax;
+  }
   section.grid {
     padding: 4vmax 0;
   }
-
   nav {
     display: flex;
     flex-direction: row;
@@ -191,11 +236,11 @@ form button {
   color: white;
   position: relative;
   overflow: hidden;
-  transition: 1s all cubic-bezier(1,.06,0,1.58);
+  transition: 1s all cubic-bezier(1, .06, 0, 1.58);
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 
-form button::before{
+form button::before {
   background: #2C7A7B;
   content: '';
   width: 0;
@@ -206,16 +251,12 @@ form button::before{
   transform: translate(-50%, -50%);
   z-index: 1;
   opacity: .3;
-  transition: all 0.6s cubic-bezier(1,.06,0,1.58);
+  transition: all 0.6s cubic-bezier(1, .06, 0, 1.58);
 }
 
-form button:hover::before{
+form button:hover::before {
   width: 100%;
 }
-
-
-
-
 
 form p {
   padding-bottom: 1vmax;
