--- a/public/style/style.css
+++ b/public/style/style.css
@@ -50,7 +50,7 @@ body::before {
   width: 100%;
   height: 100%;
   position: absolute;
-  /* z-index: 10; */
+  z-index: -1;
   top: 0;
   left: 0;
   animation: splash 1.5s cubic-bezier(1,.07,.13,.91) 1;
