--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -10,7 +10,7 @@
   <title>My bible app</title>
 </head>
 
-<body> 
+<body class="body-animation"> 
   {{>header}}
    <main>
     <section class="grid">
@@ -20,7 +20,7 @@
           <p>Find your favorite bible verse</p>
           <label for="books">
             {{!-- Ik zoek eigenlijk een manier waarmee de options kan inladen uit de Bible api.. --}}
-            <select name="books" id="books">
+            <select name="books" id="books" required>
               <option value="">Select a book</option>
               <option value="GEN">Genesis</option>
               <option value="EXO">Exodus</option>
@@ -91,7 +91,7 @@
             </select>
           </label>
           <label for="chapter">
-            <input type="number" name="chapter" class="number" min="1" placeholder="Chapter">
+            <input type="number" name="chapter" class="number" min="1" placeholder="Chapter" required>
           </label>
           <label for="verse">
             <input type="number" name="verse" class="verse" placeholder="Verse">
@@ -118,7 +118,8 @@
         </nav>
       </section>
     </section>
-  </main> {{>footer}}
+  </main> 
+  {{>footer}}
   <script src="app.js"></script>
 </body>
 
