--- a/public/style/style.css
+++ b/public/style/style.css
@@ -182,37 +182,6 @@ section {
   }
 }
 
-@media screen and (max-width: 865px) {
-  section {
-    padding: 2vmax;
-  }
-  header, footer, section.grid-about {
-    padding: 2vmax;
-  }
-  p {
-    width: 100%;
-  }
-  input, button, select {
-    display: block;
-    margin-bottom: 0.5em;
-    width: 100%;
-  }
-  section[class] section:nth-child(2) {
-    margin: 2vmax;
-  }
-  section.grid {
-    padding: 4vmax 0;
-  }
-  nav {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-  nav button {
-    height: initial;
-    margin-right: 0.5em;
-  }
-}
 
 header ul {
   list-style: none;
@@ -223,17 +192,26 @@ header ul li {
   display: inline;
 }
 
-form input, form option, form select, form button, form button {
+form input, form option, form select, form button {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  padding: 3vmin 1vmin;
+  padding: 3vmin 2vmin;
   border-radius: 8px;
   border: none;
   background: #edf2f7;
   font-weight: 600;
   font-size: 1em;
   margin-right: 0.5em;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+}
+
+form input:focus, form select:focus{
+
+  transition: 0.3s ease-in-out;
+}
+form input:focus, form select:focus{
+  font-size: 1.1em;
 }
 
 form button {
@@ -242,7 +220,6 @@ form button {
   position: relative;
   overflow: hidden;
   transition: 1s all cubic-bezier(1, .06, 0, 1.58);
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 
 form button::before {
@@ -261,6 +238,11 @@ form button::before {
 
 form button:hover::before {
   width: 100%;
+}
+
+form button:active::before {
+  /* width: 200%; */
+  background: black;
 }
 
 form p {
@@ -323,4 +305,36 @@ section[class] section>p {
 nav {
   visibility: hidden;
   opacity: 0;
+}
+
+@media screen and (max-width: 865px) {
+  section {
+    padding: 2vmax;
+  }
+  header, footer, section.grid-about {
+    padding: 2vmax;
+  }
+  p {
+    width: 100%;
+  }
+  input, button, select {
+    display: block;
+    margin-bottom: 0.5em;
+    width: 100%;
+  }
+  section[class] section:nth-child(2) {
+    margin: 2vmax;
+  }
+  section.grid {
+    padding: 4vmax 0;
+  }
+  nav {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  nav button {
+    height: initial;
+    margin-right: 0.5em;
+  }
 }
