--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -96,7 +96,7 @@
           <label for="verse">
             <input type="number" name="verse" class="verse" placeholder="Verse">
           </label>
-          <button>Search</button>
+          <button type="button">Search</button>
         </form>
       </section>
       {{!-- Section van output --}}
