--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -92,10 +92,10 @@
             </select>
           </label>
           <label for="Chapter">Chapter
-            <input type="number" name="Chapter" class="number" min="1" placeholder="Chapter" required>
+            <input type="number" name="Chapter" id="chapter" class="number" min="1" placeholder="Chapter" required>
           </label>
           <label for="Verse">Verse
-            <input type="number" name="Verse" class="verse" placeholder="Verse">
+            <input type="number" name="Verse" id="verse" class="verse" placeholder="Verse">
           </label>
           <button type="button">Search</button>
         </form>
